# tinyagentos

./: .gitignore  CONTRIBUTING.md  Makefile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  quick-start.md
.github/workflows/: build-docker.yml  build-electron.yml  build-os-images.yml  conformance-nightly.yml
data/: taosmd_default.json
desktop/: tsconfig.tsbuildinfo  vite.config.ts
desktop/scripts/: read-version.mjs
desktop/src/: main.tsx  sw.ts
docs/: catalog-platform-status.md
docs/agents/: audit-results.md
electron/: electron-builder.yml  main.js
os-build/: README.md  build.sh
os-build/boards/: rpi4.md  rpi5.md
scripts/: build-docker.sh  build-electron.sh  conformance-smoke.py  install-rkllamacpp.sh  install-server.sh  install-worker.sh
scripts/systemd/: qmd.service
static/desktop/: chat.html  index.html  sw.js
taosctl/: __init__.py  __main__.py  cli.py  cmd_agents.py  cmd_auth.py  cmd_ui.py  config.py  pyproject.toml
tests/: conftest.py  test_agent_chat_router.py  test_agent_manual.py  test_app_state.py  test_apple_backend.py  test_auth_middleware_bearer.py  test_deployer.py  test_idempotency.py  test_knowledge_monitor_agent_docs.py  test_provider_schema_canonical.py  test_routes_agents.py  test_routes_providers.py  test_routes_store.py  test_scope.py  test_taos_agent_system_prompt.py
tests/cli/: test_taosctl_agents.py  (+3 more)
tinyagentos/: __main__.py  agent_chat_router.py  agent_manual.py  app.py  auth_middleware.py  backend_adapters.py  config.py  deployer.py  idempotency.py  knowledge_monitor.py  llm_proxy.py  scope.py
(+259 files in other folders)
